refactor: архитектурный рефакторинг UI-потоков и OSGi зависимостей на базе стандартов EDT